--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,13 @@
     <string name="gram">gram</string>
     <string name="kilogram">kilogram</string>
     <string name="weight_conversions">Weight Conversions</string>
+    <string name="days">days</string>
+    <string name="hours">hours</string>
+    <string name="seconds">seconds</string>
+    <string name="weeks">weeks</string>
+    <string name="years">years</string>
+    <string name="ton_us">ton (US)</string>
+    <string name="stone_uk">stone (UK)</string>
+    <string name="ton_uk">ton (UK)</string>
+    <string name="time_conversions">Time Conversions</string>
 </resources>
