Added Page to record weight values. will be changing the 'converter' into a weight record-keeper. Will change fragment_weight.xml to reflect this. Will also change the Time Fragment to serve as a record-keeper of sorts for something else.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="reset_time_records">Reset Time Records</string>
     <string name="reset_temperature_records">Reset Temperature Records</string>
     <string name="reset_all_records">Reset All Records</string>
+    <string name="date">Date</string>
+    <string name="save">Save</string>
+    <string name="clear_record">Clear Record</string>
 </resources>
