--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,10 @@
     <string name="waist_measurement">Waist Measurement</string>
     <string name="measurement_records">Measurement Records</string>
     <string name="height">Height</string>
+    <string name="hips_cm_in">Hips-cm/in</string>
+    <string name="waist_cm_in">Waist-cm/in</string>
+    <string name="neck_cm_in">Neck-cm/in</string>
+    <string name="weight_cm_in">Weight-cm/in</string>
+    <string name="height_cm_in">Height-cm/in</string>
+    <string name="weight_kg_lb">Weight-kg/lb</string>
 </resources>
